--- a/app/stylesheets/partials/_footer.sass
+++ b/app/stylesheets/partials/_footer.sass
@@ -5,13 +5,13 @@ div.footer
 
   p
     position: relative
-    font-size: 12px
+    +font-size(12px)
     color: rgb(60,60,60)
     margin: 0px
     padding: 0px
-    text-align: center
+    +center
   a
-    font-size: 12px
+    +font-size(12px)
     color: rgb(60,60,60)
 
     &:hover
