--- a/app/stylesheets/partials/_header.sass
+++ b/app/stylesheets/partials/_header.sass
@@ -11,7 +11,7 @@ div
       :padding 0px
       h1
         display: block
-        font-size: 17px
+        +font-size(17px)
         font-weight: normal
         :color #FFFFFF
         :float left
@@ -70,7 +70,7 @@ div
     a
       display: block
       float: left
-      font-size: 12px
+      +font-size(12px)
       background: url(../../images/navigation_a_bg.jpg) no-repeat left top
       color: rgb(255,255,255)
       text-decoration: none
