--- a/app/stylesheets/partials/_login.sass
+++ b/app/stylesheets/partials/_login.sass
@@ -2,6 +2,9 @@ div
   &.login
     .main-content
       :min-height 100px
+    .content
+      p
+        margin-bottom: 20px
     .header .top, .content_wrap, .footer, .navigation
       :width 700px
     .header
