--- a/app/stylesheets/partials/_pagination.sass
+++ b/app/stylesheets/partials/_pagination.sass
@@ -1,9 +1,9 @@
 .pagination
-  text-align: right
+  +right
   padding: 5px
 
   a, span
-    font-size: 12px
+    +font-size(12px)
     padding: 2px 3px
 
     &.active
