--- a/app/stylesheets/partials/_comments.sass
+++ b/app/stylesheets/partials/_comments.sass
@@ -1,13 +1,13 @@
 .comments
   .comment
     +clearfix
-    :border-bottom 1px dotted #ccc
-    :padding-bottom 5px
-    :margin-bottom 5px
+    border-bottom: 1px dotted #ccc
+    padding-bottom: 5px
+    margin-bottom: 5px
     img
-      :float left
-      :margin 0 10px 5px 0
+      float: left
+      margin: 0 10px 5px 0
     p
-      :margin-bottom 5px
+      margin-bottom: 5px
   form.comment
-    :border-bottom none
+    border-bottom: none
