sprites; cleaned up unused images;

--- a/app/stylesheets/partials/_account.sass
+++ b/app/stylesheets/partials/_account.sass
@@ -6,17 +6,17 @@ ul#accepted_cards
     text-indent: -9999px
     margin-right: 5px
     padding: 0
-    background: transparent url(../../images/accepted_card_types.png) no-repeat 0 0
-    &.mastercard                                                 
-      background-position: -39px 0
-    &.amex                                                       
-      background-position: -78px 0
-    &.discover                                                   
-      background-position: -117px 0
-    &.jcb                                                        
-      background-position: -156px 0
-    &.dinners                                                    
-      background-position: -195px 0
+    background: transparent url(../../images/sprite.jpg) no-repeat -200px 0
+    &.mastercard
+      background-position: -239px 0
+    &.amex
+      background-position: -278px 0
+    &.discover
+      background-position: -317px 0
+    &.jcb
+      background-position: -356px 0
+    &.dinners
+      background-position: -395px 0
 
 #errorExplanation
   margin-bottom: 10px
