--- a/app/stylesheets/partials/_brands.sass
+++ b/app/stylesheets/partials/_brands.sass
@@ -36,6 +36,6 @@ div
   
   &.buttons
     .add.new_brand
-      background: url(../../images/new_brand_button.jpg)
+      background: url(../../images/sprite.jpg) no-repeat 0 0
       &:hover
-        background: url(../../images/new_brand_button_hover.jpg)
+        background-position: -100px 0
