--- a/app/stylesheets/partials/_general.sass
+++ b/app/stylesheets/partials/_general.sass
@@ -164,3 +164,11 @@ table.index
       :background = !positive_color
     &.neutral
       :background = !neutral_color
+
+div#preloaded-images
+  position: absolute
+  overflow: hidden
+  left: -9999px
+  top: -9999px
+  height: 1px
+  width: 1px
