--- a/app/stylesheets/partials/_flash.sass
+++ b/app/stylesheets/partials/_flash.sass
@@ -9,14 +9,14 @@
   +strong
   +font-size(14px)
   &#error
-    :background #C00 url(../../images/exclamation.png) no-repeat scroll 6px 50%
+    :background #C00 url(../../images/icons.png) no-repeat scroll 6px -45px
     :border-color #C99
   &#notice, &#success
-    :background #060 url(../../images/accept.png) no-repeat scroll 6px 50%
+    :background #060 url(../../images/icons.png) no-repeat scroll 6px 5px
     :border-color #9c9
   &#warning
     :color #514721 
-    :background #fff6bf url(../../images/warning.png) no-repeat scroll 6px 50%
+    :background #fff6bf url(../../images/icons.png) no-repeat scroll 6px -95px
     :border-color #ffd324
   
   a, a:visited
