--- a/app/stylesheets/partials/_team.sass
+++ b/app/stylesheets/partials/_team.sass
@@ -33,6 +33,6 @@ div
             background: rgb(255,0,0)
   &.buttons
     .add.new_user
-      background: url(../../images/new_user_button.jpg)
+      background: url(../../images/sprite.jpg) no-repeat 0 -25px
       &:hover
-        background: url(../../images/new_user_button_hover.jpg)
+        background-position: -100px -25px
