--- a/app/stylesheets/partials/_brands.sass
+++ b/app/stylesheets/partials/_brands.sass
@@ -36,6 +36,6 @@ div
   
   &.buttons
     .add.new_brand
-      background: url(../../images/sprite.jpg) no-repeat 0 0
+      background: #{image_url("sprite.jpg")} no-repeat 0 0
       &:hover
         background-position: -100px 0
