--- a/app/stylesheets/partials/_header.sass
+++ b/app/stylesheets/partials/_header.sass
@@ -61,7 +61,7 @@ div
     li
       display: block
       float: left
-      background: url(../../images/nav_bg.jpg) no-repeat left top
+      background: transparent #{image_url("nav_bg.jpg")} no-repeat left top
       list-style: none
       margin: 0px
       margin-right: 4px
@@ -72,23 +72,24 @@ div
       display: block
       float: left
       +font-size(12px)
-      background: url(../../images/nav_bg.jpg) no-repeat right top
+      background: transparent #{image_url("nav_bg.jpg")} no-repeat right top
       color: rgb(255,255,255)
       text-decoration: none
       margin: 0px
       padding: 5px 12px 5px 4px
       margin-left: 8px
       height: 14px
+      outline: none
 
       &:hover
         color: rgb(255,255,0)
 
     li
       &.active
-        background: url(../../images/nav_bg.jpg) no-repeat left -24px
+        background: transparent #{image_url("nav_bg.jpg")} no-repeat left -24px
 
         a
-          background: url(../../images/nav_bg.jpg) no-repeat right -24px
+          background: transparent #{image_url("nav_bg.jpg")} no-repeat right -24px
 
       &.right_side
         float: right
