A couple of style tweaks.

--- a/app/stylesheets/partials/_dashboard.sass
+++ b/app/stylesheets/partials/_dashboard.sass
@@ -9,6 +9,9 @@
     margin-bottom: 40px
     a.view_all
       +font-size(11px)
+    
+    .result.read
+      color= !general_font_color
 
   .updates
     h3
